Fix: Added padding to the right to prevent elements from overlapping the ".btn-term-remove-all" button (sidebar.css)

--- a/web/skins/classic/css/base/sidebar.css
+++ b/web/skins/classic/css/base/sidebar.css
@@ -317,6 +317,10 @@ body #sidebarMain .sub-menu-list {
   position: relative; /* Enable absolute positioning for child */
 }
 
+.extruder .extruder-content .controlHeader .chosen-choices {
+  padding-right: 30px;
+}
+
 .extruder .extruder-content .btn-term-remove-all {
   position: absolute;
   top: 50%;
